<resources>
    <string name="app_name">EduHub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,</string>
    <string name="lipsumbig">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,</string>
    <string name="lipsumshort">Lorem Ipsum is simply dummy text</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="sign_up"> Sign Up</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="have_a_account">Have a account?</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="learning_online_anywhere">Learning Online anywhere</string>
    <string name="learn_anywhere">Learn Anywhere</string>
    <string name="profile">Profile</string>
    <string name="learn">Learn</string>
    <string name="test">Test</string>
    <string name="all">All</string>
    <string name="ongoing">Ongoing</string>
    <string name="mathematics">Mathematics</string>
    <string name="science">Science</string>
    <string name="completed">Completed</string>
    <string name="test_solution">Test Solution</string>
    <string name="score">Score</string>
    <string name="favourite_tutor">Favourite Tutor</string>
    <string name="chat_with_us">Chat with us</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="register_now">Register Now</string>
    <string name="login">Login</string>
    <string name="welcome_to_eduhub">Welcome to EduHub</string>
    <string name="get_started">Get Started</string>
    <string name="widen_your_horizons">Widen your horizons</string>
    <string name="or">or</string>
    <string name="username_mobile_no">Username/Mobile no.</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="enter_verification_code_send_in_you_email_id">Enter verification code send in you email id.</string>
    <string name="name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="your_confirmation_link_will_be_send_to_this_email">Your confirmation link will be send to this email</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="please_enter_your_country_and_your_number">Please enter your number></string>
    <string name="equations">Equations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feedback"><![CDATA[Feedback & Support]]></string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="facebook_app_id">2663361150642793</string>
    <string name="fb_login_protocol_scheme">fb2663361150642793</string>
    <string name="no_record_found">No Record found!</string>
    <string name="title_activity_pdf_view_screen">PdfViewScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_email">Email</string>
    <string name="study_guide_videos"><![CDATA[Study Guide & Videos]]></string>
    <string name="explanation_videos_study_guides"><![CDATA[Explanation Videos & Study Guides]]></string>

</resources>