<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StartedScreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="vertical">



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_img4"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:textSize="@dimen/text17"
            android:padding="@dimen/padding_10"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/widen_your_horizons"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:textSize="@dimen/text_15"
            android:padding="@dimen/padding_10"
            android:gravity="center"
            android:layout_marginTop="@dimen/padding_10"
            android:layout_marginBottom="@dimen/padding_10"
            android:textColor="@color/black"
            android:text="@string/lipsum"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_started"
            android:layout_gravity="center"
            android:fontFamily="@font/regular"
            android:gravity="center"
            android:paddingTop="@dimen/padding_15"
            android:layout_marginTop="@dimen/margin_20"
            android:paddingBottom="@dimen/padding_15"
            android:paddingLeft="@dimen/margin_side_button"
            android:paddingRight="@dimen/margin_side_button"
            android:textSize="@dimen/text17"
            android:background="@drawable/round_ed"
            android:textColor="@color/white"
            android:text="@string/get_started"
            />
    </LinearLayout>

</RelativeLayout>