<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/margin_30"
            android:layout_centerInParent="true"
            android:orientation="vertical">



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_button"
                android:layout_gravity="center"
                android:src="@drawable/ic_logob"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_marginLeft="@dimen/padding_15"
                android:layout_marginRight="@dimen/padding_15"
                android:layout_marginBottom="@dimen/padding_15"
                  android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:layout_margin="@dimen/padding_10"
                    android:textSize="@dimen/text25"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/login"
                    android:textAlignment="center"/>
                <EditText
                    android:drawableLeft="@drawable/ic_user_grey"
                     android:drawablePadding="@dimen/padding_10"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/regular"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundsolidgrey"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="@dimen/margin_20"
                    android:padding="@dimen/padding_10"
                    android:hint="@string/username_mobile_no"/>
                <EditText
                    android:drawableLeft="@drawable/ic_driver_app_password"
                     android:drawablePadding="@dimen/padding_10"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/regular"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundsolidgrey"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="@dimen/margin_20"
                    android:padding="@dimen/padding_10"
                    android:hint="@string/password"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_13"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:id="@+id/tv_forgotPassword"
                    android:fontFamily="@font/regular"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_login"
                    android:layout_gravity="center"
                    android:fontFamily="@font/light"
                    android:gravity="center"
                    android:paddingTop="@dimen/padding_15"
                    android:layout_marginTop="@dimen/margin_20"
                    android:paddingBottom="@dimen/padding_15"
                    android:paddingLeft="@dimen/margin_side_button"
                    android:paddingRight="@dimen/margin_side_button"
                    android:textSize="@dimen/text17"
                    android:background="@drawable/round_ed"
                    android:textColor="@color/white"
                    android:text="@string/login"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginLeft="@dimen/margin_side_button"
                    android:layout_marginRight="@dimen/margin_side_button"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_height="wrap_content">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".5"
                        android:background="@color/registerbtnbg"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/or"
                        android:textColor="@color/d_grey"
                        android:layout_marginLeft="@dimen/margin_20"
                        android:layout_marginRight="@dimen/margin_20"
                        android:textSize="@dimen/text_15"

                        android:layout_height="wrap_content"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".5"
                        android:background="@color/registerbtnbg"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:id="@+id/ll_selection"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_30"

                     android:orientation="horizontal"
                    android:gravity="center"

                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_marginRight="@dimen/margin_5"
                        android:src="@drawable/ic_fb"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:src="@drawable/ic_icon_google"
                        android:layout_marginLeft="@dimen/margin_5"
                        android:layout_height="wrap_content"/>


                </LinearLayout>





                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">



                </RelativeLayout>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_15"
                        android:layout_marginRight="@dimen/margin_5"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/regular"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tv_signup"
                        android:layout_width="wrap_content"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_15"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/regular"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>