<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />


    </data>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WelcomeSignupScreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
     android:layout_centerInParent="true"
        android:gravity="center"
         android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_button"
            android:padding="@dimen/_15sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_eduhub_logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:textSize="@dimen/text_21"
            android:layout_marginTop="@dimen/padding_10"
            android:padding="@dimen/padding_10"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/welcome_to_eduhub"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/margin_side_button"
            android:layout_marginRight="@dimen/margin_side_button"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_login"
                android:layout_gravity="center"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:paddingTop="@dimen/padding_15"
                android:layout_marginTop="@dimen/margin_20"
                android:paddingBottom="@dimen/padding_15"
                android:paddingLeft="@dimen/margin_side_button"
                android:paddingRight="@dimen/margin_side_button"
                android:backgroundTint="@color/red"
                android:textSize="@dimen/text17"
                android:background="@drawable/round_ed"
                android:textColor="@color/white"
                android:text="@string/login"
                />
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_register"
            android:layout_gravity="center"
            android:fontFamily="@font/regular"
            android:paddingTop="@dimen/padding_15"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_15"
            android:layout_marginTop="@dimen/margin_20"
            android:paddingLeft="@dimen/margin_top_button"
            android:paddingRight="@dimen/margin_top_button"
            android:textSize="@dimen/text17"
            android:background="@drawable/round_register"
            android:textColor="@color/white"
            android:text="@string/register_now"
            />
        </LinearLayout>

    </LinearLayout>
    </RelativeLayout></layout>