<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     tools:context=".ui.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/margin_30"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_button"
                android:padding="@dimen/_15sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_eduhub_logo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_marginLeft="@dimen/padding_15"
                android:layout_marginRight="@dimen/padding_15"
                android:layout_marginBottom="@dimen/padding_15"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:layout_margin="@dimen/padding_10"
                    android:textSize="@dimen/text25"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/forgot_password"
                    android:textAlignment="center"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:drawableTint="@color/black"
                    android:id="@+id/ed_email_forgot"
                    android:background="@drawable/round_ed_stroke_black"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:drawablePadding="@dimen/padding_10"
                    android:textSize="@dimen/text17"
                    android:textColor="@color/black"
                     android:fontFamily="@font/regular"
                    android:hint="@string/email"

                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="@dimen/padding_10"
                    android:paddingVertical="@dimen/padding_12" />

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/your_confirmation_link_will_be_send_to_this_email"
                     android:textSize="@dimen/text_13"

                    android:layout_gravity="center"
                     android:layout_marginTop="@dimen/padding_10"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                     android:fontFamily="@font/regular"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_send_forgot"
                    android:layout_gravity="center"
                    android:fontFamily="@font/regular"
                    android:gravity="center"

                    android:background="@drawable/round_ed"
                    android:backgroundTint="@color/red"
                    android:paddingTop="@dimen/padding_15"
                    android:layout_marginTop="@dimen/margin_20"
                    android:paddingBottom="@dimen/padding_15"
                    android:paddingLeft="@dimen/margin_side_button"
                    android:paddingRight="@dimen/margin_side_button"
                    android:textSize="@dimen/text17"
                     android:textColor="@color/white"
                    android:text="Send"
                    />





                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">



                </RelativeLayout>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/ll_backtologin"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="Back to"
                         android:textSize="@dimen/text_15"
                        android:layout_marginRight="@dimen/margin_5"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/regular"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tv_signup"
                        android:layout_width="wrap_content"
                        android:text="@string/login"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_15"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/regular"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>